[gd_scene load_steps=4 format=3 uid="uid://dp3rgqaehb3xu"]

[ext_resource type="Script" path="res://Scenes/OptionsMenu/Input/InputOptionsMenu.gd" id="1"]
[ext_resource type="Theme" path="res://Themes/MainMenuTheme.tres" id="2"]
[ext_resource type="Script" path="res://Scenes/OptionsMenu/Input/KeyAssignmentDialog.gd" id="3_wsh2h"]

[node name="Input" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="KeyAssignmentDialog" type="ConfirmationDialog" parent="."]
theme = ExtResource("2")
dialog_text = "Press a key..."
script = ExtResource("3_wsh2h")

[connection signal="canceled" from="KeyAssignmentDialog" to="." method="_on_key_assignment_dialog_canceled"]
[connection signal="confirmed" from="KeyAssignmentDialog" to="." method="_on_KeyAssignmentDialog_confirmed"]
